# automation

./: README.md  emails.txt  existing-contacts.txt  phone_numbers.txt  potential-contacts.txt  pyproject.toml
automation/: pyproject.toml
automation/assets/: potential-contacts.txt
automation/automation/: automation.py
